Ой, всё не так. Уровни навигации попутал. Попытка номер 2.

--- a/modules/ROOT/partials/bo-om-baseuniversal.adoc
+++ b/modules/ROOT/partials/bo-om-baseuniversal.adoc
@@ -1,13 +1,13 @@
-****** xref:BackOffice-ObjectModel-BaseUniversal:BaseDictionaryCard_CL.adoc[]
-****** xref:BackOffice-ObjectModel-BaseUniversal:BackOffice_CL.adoc[]
-****** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversal_CL.adoc[]
-******* xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversal.ItemTypes_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItem_CL.adoc[]
-******* xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItem.ItemCard_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemCard_CL.adoc[]
-******* xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemCard.MainInfo_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemCardMainInfo_CL.adoc[]
-******* xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemCardMainInfo.Item_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemType_CL.adoc[]
-******* xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemType.Items_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemTypeViewField_CL.adoc[]
+***** xref:BackOffice-ObjectModel-BaseUniversal:BaseDictionaryCard_CL.adoc[]
+***** xref:BackOffice-ObjectModel-BaseUniversal:BackOffice_CL.adoc[]
+***** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversal_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversal.ItemTypes_PR.adoc[]
+***** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItem_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItem.ItemCard_PR.adoc[]
+***** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemCard_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemCard.MainInfo_PR.adoc[]
+***** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemCardMainInfo_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemCardMainInfo.Item_PR.adoc[]
+***** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemType_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemType.Items_PR.adoc[]
+***** xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversalItemTypeViewField_CL.adoc[]
