--- a/modules/ROOT/partials/bo-om-employeecard.adoc
+++ b/modules/ROOT/partials/bo-om-employeecard.adoc
@@ -1,3 +1,3 @@
-****** xref:BackOffice-ObjectModel-EmployeeCard:EmployeeCard_CL.adoc[]
-******* xref:BackOffice-ObjectModel-EmployeeCard:EmployeeCard.MainInfo_PR.adoc[]
-****** xref:BackOffice-ObjectModel-EmployeeCard:EmployeeCardMainInfo_CL.adoc[]
+***** xref:BackOffice-ObjectModel-EmployeeCard:EmployeeCard_CL.adoc[]
+****** xref:BackOffice-ObjectModel-EmployeeCard:EmployeeCard.MainInfo_PR.adoc[]
+***** xref:BackOffice-ObjectModel-EmployeeCard:EmployeeCardMainInfo_CL.adoc[]
