--- a/modules/ROOT/partials/bo-om-rolemodel.adoc
+++ b/modules/ROOT/partials/bo-om-rolemodel.adoc
@@ -1,11 +1,11 @@
-****** xref:BackOffice-ObjectModel-RoleModel:ReferenceList_CL.adoc[]
-****** xref:BackOffice-ObjectModel-RoleModel:ReferenceListReference_CL.adoc[]
-****** xref:BackOffice-ObjectModel-RoleModel:RoleModel_CL.adoc[]
-****** xref:BackOffice-ObjectModel-RoleModel:RoleModelRole_CL.adoc[]
-******* xref:BackOffice-ObjectModel-RoleModel:RoleModelRole.ConditionGroup_PR.adoc[]
-******* xref:BackOffice-ObjectModel-RoleModel:RoleModelRole.AddConditionGroup_MT.adoc[]
-******* xref:BackOffice-ObjectModel-RoleModel:RoleModelRole.Validate_MT.adoc[]
-****** xref:BackOffice-ObjectModel-RoleModel:RoleModelRoleConditionGroup_CL.adoc[]
-****** xref:BackOffice-ObjectModel-RoleModel:RoleModelConditionValueDayWorkStatus_EN.adoc[]
-****** xref:BackOffice-ObjectModel-RoleModel:RoleModelRoleConditionParameter_EN.adoc[]
-****** xref:BackOffice-ObjectModel-RoleModel:RoleModelConditionValueTimeWorkStatus_EN.adoc[]
+***** xref:BackOffice-ObjectModel-RoleModel:ReferenceList_CL.adoc[]
+***** xref:BackOffice-ObjectModel-RoleModel:ReferenceListReference_CL.adoc[]
+***** xref:BackOffice-ObjectModel-RoleModel:RoleModel_CL.adoc[]
+***** xref:BackOffice-ObjectModel-RoleModel:RoleModelRole_CL.adoc[]
+****** xref:BackOffice-ObjectModel-RoleModel:RoleModelRole.ConditionGroup_PR.adoc[]
+****** xref:BackOffice-ObjectModel-RoleModel:RoleModelRole.AddConditionGroup_MT.adoc[]
+****** xref:BackOffice-ObjectModel-RoleModel:RoleModelRole.Validate_MT.adoc[]
+***** xref:BackOffice-ObjectModel-RoleModel:RoleModelRoleConditionGroup_CL.adoc[]
+***** xref:BackOffice-ObjectModel-RoleModel:RoleModelConditionValueDayWorkStatus_EN.adoc[]
+***** xref:BackOffice-ObjectModel-RoleModel:RoleModelRoleConditionParameter_EN.adoc[]
+***** xref:BackOffice-ObjectModel-RoleModel:RoleModelConditionValueTimeWorkStatus_EN.adoc[]
