--- a/modules/ROOT/partials/bo-xml.adoc
+++ b/modules/ROOT/partials/bo-xml.adoc
@@ -1,5 +1,5 @@
-***** xref:BackOffice-Xml:Xml_NS.adoc[]
-****** xref:BackOffice-Xml:Schemas/Schemas_NS.adoc[]
-******* xref:BackOffice-Xml:Schemas/SearchParameterInfo_CL.adoc[]
-******* xref:BackOffice-Xml:Schemas/SearchParametersInfo_CL.adoc[]
-******** xref:BackOffice-Xml:Schemas/SearchParametersInfo.SearchParameterInfo_PR.adoc[]
+**** xref:BackOffice-Xml:Xml_NS.adoc[]
+***** xref:BackOffice-Xml:Schemas/Schemas_NS.adoc[]
+****** xref:BackOffice-Xml:Schemas/SearchParameterInfo_CL.adoc[]
+****** xref:BackOffice-Xml:Schemas/SearchParametersInfo_CL.adoc[]
+******* xref:BackOffice-Xml:Schemas/SearchParametersInfo.SearchParameterInfo_PR.adoc[]
