--- a/modules/ROOT/partials/solutions.adoc
+++ b/modules/ROOT/partials/solutions.adoc
@@ -1,34 +1,34 @@
-*** xref:solutions:cards/develop-solution.adoc[]
-**** xref:solutions:cards/scheme/dev-cards-and-lib.adoc[]
-***** xref:solutions:cards/scheme/dev-data-scheme.adoc[]
-****** xref:solutions:cards/scheme/connect-db.adoc[]
-****** xref:solutions:cards/prepare-card-lib.adoc[]
-****** xref:solutions:cards/scheme/create-edit-scheme.adoc[]
-******* xref:solutions:cards/scheme/card-description.adoc[]
-******* xref:solutions:cards/scheme/sections-description.adoc[]
-******* xref:solutions:cards/scheme/sections-fields.adoc[]
-******* xref:solutions:cards/scheme/actions.adoc[]
-******* xref:solutions:cards/scheme/modes.adoc[]
-******* xref:solutions:cards/scheme/transformations.adoc[]
-******* xref:solutions:cards/scheme/virtual-fields.adoc[]
-****** xref:solutions:cards/scheme/load-scheme.adoc[]
-***** xref:solutions:cards/object-model/create-object-model.adoc[]
-****** xref:solutions:cards/object-model/card-section-lines.adoc[]
-****** xref:solutions:cards/object-model/card.adoc[]
-****** xref:solutions:cards/object-model/mapper.adoc[]
-***** xref:solutions:cards/card-component/component.adoc[]
-****** xref:solutions:cards/card-component/standard-interfaces.adoc[]
-******* xref:solutions:cards/card-component/events.adoc[]
-******** xref:solutions:cards/card-component/thread.adoc[]
-******* xref:solutions:cards/card-component/reuse.adoc[]
-****** xref:solutions:cards/card-component/controls.adoc[]
-***** xref:solutions:cards/card-component/library.adoc[]
-**** xref:solutions:extensions/extensions.adoc[]
-***** xref:solutions:extensions/winclient.adoc[]
-***** xref:solutions:extensions/server-plugins.adoc[]
-***** xref:solutions:extensions/console-plugin.adoc[]
-**** xref:solutions:control.adoc[]
-**** xref:solutions:distribution.adoc[]
-***** xref:solutions:distribution-server.adoc[]
-***** xref:solutions:distribution-client.adoc[]
-**** xref:solutions:testing.adoc[]
+** xref:solutions:cards/develop-solution.adoc[]
+*** xref:solutions:cards/scheme/dev-cards-and-lib.adoc[]
+**** xref:solutions:cards/scheme/dev-data-scheme.adoc[]
+***** xref:solutions:cards/scheme/connect-db.adoc[]
+***** xref:solutions:cards/prepare-card-lib.adoc[]
+***** xref:solutions:cards/scheme/create-edit-scheme.adoc[]
+****** xref:solutions:cards/scheme/card-description.adoc[]
+****** xref:solutions:cards/scheme/sections-description.adoc[]
+****** xref:solutions:cards/scheme/sections-fields.adoc[]
+****** xref:solutions:cards/scheme/actions.adoc[]
+****** xref:solutions:cards/scheme/modes.adoc[]
+****** xref:solutions:cards/scheme/transformations.adoc[]
+****** xref:solutions:cards/scheme/virtual-fields.adoc[]
+***** xref:solutions:cards/scheme/load-scheme.adoc[]
+**** xref:solutions:cards/object-model/create-object-model.adoc[]
+***** xref:solutions:cards/object-model/card-section-lines.adoc[]
+***** xref:solutions:cards/object-model/card.adoc[]
+***** xref:solutions:cards/object-model/mapper.adoc[]
+**** xref:solutions:cards/card-component/component.adoc[]
+***** xref:solutions:cards/card-component/standard-interfaces.adoc[]
+****** xref:solutions:cards/card-component/events.adoc[]
+******* xref:solutions:cards/card-component/thread.adoc[]
+****** xref:solutions:cards/card-component/reuse.adoc[]
+***** xref:solutions:cards/card-component/controls.adoc[]
+**** xref:solutions:cards/card-component/library.adoc[]
+*** xref:solutions:extensions/extensions.adoc[]
+**** xref:solutions:extensions/winclient.adoc[]
+**** xref:solutions:extensions/server-plugins.adoc[]
+**** xref:solutions:extensions/console-plugin.adoc[]
+*** xref:solutions:control.adoc[]
+*** xref:solutions:distribution.adoc[]
+**** xref:solutions:distribution-server.adoc[]
+**** xref:solutions:distribution-client.adoc[]
+*** xref:solutions:testing.adoc[]
