--- a/modules/ROOT/partials/workflow.adoc
+++ b/modules/ROOT/partials/workflow.adoc
@@ -1,15 +1,15 @@
-*** xref:bpms:develop-environment.adoc[]
+** xref:bpms:develop-environment.adoc[]
 *** Программные компоненты СУБП
-***** xref:bpms:gates.adoc[]
-****** xref:bpms:gate-client.adoc[]
-****** xref:bpms:gate-server.adoc[]
-***** xref:bpms:functions.adoc[]
-****** xref:bpms:functions-client.adoc[]
-****** xref:bpms:functions-server.adoc[]
-***** xref:bpms:scenarios.adoc[]
-****** xref:bpms:scenarios-develop.adoc[]
-****** xref:bpms:scenario-with-object-model.adoc[]
-****** xref:bpms:scenario-debug.adoc[]
-****** xref:bpms:scenario-save.adoc[]
-**** xref:bpms:com-interfaces.adoc[]
-**** xref:bpms:gate-subscription.adoc[]
+**** xref:bpms:gates.adoc[]
+***** xref:bpms:gate-client.adoc[]
+***** xref:bpms:gate-server.adoc[]
+**** xref:bpms:functions.adoc[]
+***** xref:bpms:functions-client.adoc[]
+***** xref:bpms:functions-server.adoc[]
+**** xref:bpms:scenarios.adoc[]
+***** xref:bpms:scenarios-develop.adoc[]
+***** xref:bpms:scenario-with-object-model.adoc[]
+***** xref:bpms:scenario-debug.adoc[]
+***** xref:bpms:scenario-save.adoc[]
+*** xref:bpms:com-interfaces.adoc[]
+*** xref:bpms:gate-subscription.adoc[]
