--- a/modules/ROOT/root.adoc
+++ b/modules/ROOT/root.adoc
@@ -6,8 +6,8 @@
 ** xref:terms.adoc[Перечень терминов и их определений]
 ** xref:abbreviations.adoc[Перечень принятых сокращений]
 
-** xref:begin.adoc[]
-** xref:development.adoc[]
+* xref:begin.adoc[]
+* xref:development.adoc[]
 include::partial$cards.adoc[]
 include::partial$views.adoc[]
 include::partial$solutions.adoc[]
