--- a/modules/ROOT/partials/bo-om-accessinfo.adoc
+++ b/modules/ROOT/partials/bo-om-accessinfo.adoc
@@ -1,9 +1,9 @@
-****** xref:BackOffice-ObjectModel-AccessInfo:AccessInfo_CL.adoc[]
-******* xref:BackOffice-ObjectModel-AccessInfo:AccessInfo_CT.adoc[]
-******* xref:BackOffice-ObjectModel-AccessInfo:AccessInfo.Operations_PR.adoc[]
-******* xref:BackOffice-ObjectModel-AccessInfo:AccessInfo.Roles_PR.adoc[]
-******* xref:BackOffice-ObjectModel-AccessInfo:AccessInfo.Load_MT.adoc[]
-******* xref:BackOffice-ObjectModel-AccessInfo:AccessInfo.Save_MT.adoc[]
-****** xref:BackOffice-ObjectModel-AccessInfo:AccessInfoRole_CL.adoc[]
-****** xref:BackOffice-ObjectModel-AccessInfo:AccessInfoOperation_CL.adoc[]
-****** xref:BackOffice-ObjectModel-AccessInfo:AccessInfoOperationResult_EN.adoc[]
+***** xref:BackOffice-ObjectModel-AccessInfo:AccessInfo_CL.adoc[]
+****** xref:BackOffice-ObjectModel-AccessInfo:AccessInfo_CT.adoc[]
+****** xref:BackOffice-ObjectModel-AccessInfo:AccessInfo.Operations_PR.adoc[]
+****** xref:BackOffice-ObjectModel-AccessInfo:AccessInfo.Roles_PR.adoc[]
+****** xref:BackOffice-ObjectModel-AccessInfo:AccessInfo.Load_MT.adoc[]
+****** xref:BackOffice-ObjectModel-AccessInfo:AccessInfo.Save_MT.adoc[]
+***** xref:BackOffice-ObjectModel-AccessInfo:AccessInfoRole_CL.adoc[]
+***** xref:BackOffice-ObjectModel-AccessInfo:AccessInfoOperation_CL.adoc[]
+***** xref:BackOffice-ObjectModel-AccessInfo:AccessInfoOperationResult_EN.adoc[]
