--- a/modules/ROOT/partials/bo-om-numerationrules.adoc
+++ b/modules/ROOT/partials/bo-om-numerationrules.adoc
@@ -1,14 +1,14 @@
-****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRules_CL.adoc[]
-******* xref:BackOffice-ObjectModel-NumerationRules:NumerationRules.Numerators_PR.adoc[]
-******* xref:BackOffice-ObjectModel-NumerationRules:NumerationRules.Rules_PR.adoc[]
-****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesNumerator_CL.adoc[]
-****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesNumeratorZoneType_EN.adoc[]
-****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRule_CL.adoc[]
-******* xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRule.Items_PR.adoc[]
-****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItem_CL.adoc[]
-******* xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItem.Conditions_PR.adoc[]
-******* xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItem.NumeratorRef_PR.adoc[]
-******* xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItem.PrefixType_PR.adoc[]
-******* xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItem.SuffixType_PR.adoc[]
-****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItemLexeme_EN.adoc[]
-****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItemCondition_CL.adoc[]
+***** xref:BackOffice-ObjectModel-NumerationRules:NumerationRules_CL.adoc[]
+****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRules.Numerators_PR.adoc[]
+****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRules.Rules_PR.adoc[]
+***** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesNumerator_CL.adoc[]
+***** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesNumeratorZoneType_EN.adoc[]
+***** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRule_CL.adoc[]
+****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRule.Items_PR.adoc[]
+***** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItem_CL.adoc[]
+****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItem.Conditions_PR.adoc[]
+****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItem.NumeratorRef_PR.adoc[]
+****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItem.PrefixType_PR.adoc[]
+****** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItem.SuffixType_PR.adoc[]
+***** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItemLexeme_EN.adoc[]
+***** xref:BackOffice-ObjectModel-NumerationRules:NumerationRulesRuleItemCondition_CL.adoc[]
