--- a/modules/ROOT/partials/bo-om-services-categorylist.adoc
+++ b/modules/ROOT/partials/bo-om-services-categorylist.adoc
@@ -1,3 +1,3 @@
-******* xref:BackOffice-ObjectModel-Services-ICategoryListService:ICategoryListService_IN.adoc[]
-******** xref:BackOffice-ObjectModel-Services-ICategoryListService:ICategoryListService.AddCategory_MT.adoc[]
-******** xref:BackOffice-ObjectModel-Services-ICategoryListService:ICategoryListService.CreateCategoryList_MT.adoc[]
+****** xref:BackOffice-ObjectModel-Services-ICategoryListService:ICategoryListService_IN.adoc[]
+******* xref:BackOffice-ObjectModel-Services-ICategoryListService:ICategoryListService.AddCategory_MT.adoc[]
+******* xref:BackOffice-ObjectModel-Services-ICategoryListService:ICategoryListService.CreateCategoryList_MT.adoc[]
