--- a/modules/ROOT/partials/bo-om-services-partners.adoc
+++ b/modules/ROOT/partials/bo-om-services-partners.adoc
@@ -1,6 +1,6 @@
-******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService_IN.adoc[]
-******** xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.AddNewEmployee_MT.adoc[]
-******** xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.AddNewUnit_MT.adoc[]
-******** xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.DeleteEmployee_MT.adoc[]
-******** xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.FindCompanyByNameOnServer_MT.adoc[]
-******** xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.FindUnitGroups_MT.adoc[]
+****** xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService_IN.adoc[]
+******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.AddNewEmployee_MT.adoc[]
+******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.AddNewUnit_MT.adoc[]
+******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.DeleteEmployee_MT.adoc[]
+******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.FindCompanyByNameOnServer_MT.adoc[]
+******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.FindUnitGroups_MT.adoc[]
