--- a/modules/ROOT/partials/pl-extensibility.adoc
+++ b/modules/ROOT/partials/pl-extensibility.adoc
@@ -1,40 +1,40 @@
-***** xref:Platform-Extensibility:Extensibility_NS.adoc[]
-****** xref:Platform-Extensibility:NavCommand_CL.adoc[]
-******* xref:Platform-Extensibility:NavCommand_CT.adoc[]
-******* xref:Platform-Extensibility:NavCommand.CommandType_PR.adoc[]
-******* xref:Platform-Extensibility:NavCommand.Description_PR.adoc[]
-******* xref:Platform-Extensibility:NavCommand.Icon_PR.adoc[]
-******* xref:Platform-Extensibility:NavCommand.Location_PR.adoc[]
-****** xref:Platform-Extensibility:NavCommandLocation_CL.adoc[]
-******* xref:Platform-Extensibility:NavCommandLocation_CT.adoc[]
-****** xref:Platform-Extensibility:NavFolderInfo_CL.adoc[]
-******* xref:Platform-Extensibility:NavFolderInfo.Flags_PR.adoc[]
-******* xref:Platform-Extensibility:NavFolderInfo.FolderId_PR.adoc[]
-******* xref:Platform-Extensibility:NavFolderInfo.Location_PR.adoc[]
-****** xref:Platform-Extensibility:NavPropertyPage_CL.adoc[]
-******* xref:Platform-Extensibility:NavPropertyPage_CT.adoc[]
-******* xref:Platform-Extensibility:NavPropertyPage.Clsid_PR.adoc[]
-******* xref:Platform-Extensibility:NavPropertyPage.License_PR.adoc[]
-******* xref:Platform-Extensibility:NavPropertyPage.Name_PR.adoc[]
-******* xref:Platform-Extensibility:NavPropertyPage.PageType_PR.adoc[]
-******* xref:Platform-Extensibility:NavPropertyPage.Progid_PR.adoc[]
-******* xref:Platform-Extensibility:NavPropertyPage.TypeName_PR.adoc[]
-****** xref:Platform-Extensibility:INavCardType_IN.adoc[]
-****** xref:Platform-Extensibility:INavCardTypeCollection_IN.adoc[]
-****** xref:Platform-Extensibility:INavFolderTreeExtension_IN.adoc[]
-******* xref:Platform-Extensibility:INavFolderTreeExtension.GetTreeExtensionFolders_MT.adoc[]
-****** xref:Platform-Extensibility:INavFolderTypeCollection_IN.adoc[]
-****** xref:Platform-Extensibility:INavCommandExtension_IN.adoc[]
-****** xref:Platform-Extensibility:INavReportExtension_IN.adoc[]
-******* xref:Platform-Extensibility:INavReportExtension.CreateReport_MT.adoc[]
-****** xref:Platform-Extensibility:MenuLocation_EN.adoc[]
-****** xref:Platform-Extensibility:NavCommandStatus_EN.adoc[]
-****** xref:Platform-Extensibility:NavCommandTypes_EN.adoc[]
-****** xref:Platform-Extensibility:NavExtensionTypes_EN.adoc[]
-****** xref:Platform-Extensibility:NavFolderControlFlags_EN.adoc[]
-****** xref:Platform-Extensibility:NavFolderControlType_EN.adoc[]
-****** xref:Platform-Extensibility:NavPickerAccountTypes_EN.adoc[]
-****** xref:Platform-Extensibility:NavPickerNameFormat_EN.adoc[]
-****** xref:Platform-Extensibility:NavPropertyPageTypes_EN.adoc[]
-****** xref:Platform-Extensibility:NavFolderTreeFlags_EN.adoc[]
-****** xref:Platform-Extensibility:NavFolderLocationFlags_EN.adoc[]
+**** xref:Platform-Extensibility:Extensibility_NS.adoc[]
+***** xref:Platform-Extensibility:NavCommand_CL.adoc[]
+****** xref:Platform-Extensibility:NavCommand_CT.adoc[]
+****** xref:Platform-Extensibility:NavCommand.CommandType_PR.adoc[]
+****** xref:Platform-Extensibility:NavCommand.Description_PR.adoc[]
+****** xref:Platform-Extensibility:NavCommand.Icon_PR.adoc[]
+****** xref:Platform-Extensibility:NavCommand.Location_PR.adoc[]
+***** xref:Platform-Extensibility:NavCommandLocation_CL.adoc[]
+****** xref:Platform-Extensibility:NavCommandLocation_CT.adoc[]
+***** xref:Platform-Extensibility:NavFolderInfo_CL.adoc[]
+****** xref:Platform-Extensibility:NavFolderInfo.Flags_PR.adoc[]
+****** xref:Platform-Extensibility:NavFolderInfo.FolderId_PR.adoc[]
+****** xref:Platform-Extensibility:NavFolderInfo.Location_PR.adoc[]
+***** xref:Platform-Extensibility:NavPropertyPage_CL.adoc[]
+****** xref:Platform-Extensibility:NavPropertyPage_CT.adoc[]
+****** xref:Platform-Extensibility:NavPropertyPage.Clsid_PR.adoc[]
+****** xref:Platform-Extensibility:NavPropertyPage.License_PR.adoc[]
+****** xref:Platform-Extensibility:NavPropertyPage.Name_PR.adoc[]
+****** xref:Platform-Extensibility:NavPropertyPage.PageType_PR.adoc[]
+****** xref:Platform-Extensibility:NavPropertyPage.Progid_PR.adoc[]
+****** xref:Platform-Extensibility:NavPropertyPage.TypeName_PR.adoc[]
+***** xref:Platform-Extensibility:INavCardType_IN.adoc[]
+***** xref:Platform-Extensibility:INavCardTypeCollection_IN.adoc[]
+***** xref:Platform-Extensibility:INavFolderTreeExtension_IN.adoc[]
+****** xref:Platform-Extensibility:INavFolderTreeExtension.GetTreeExtensionFolders_MT.adoc[]
+***** xref:Platform-Extensibility:INavFolderTypeCollection_IN.adoc[]
+***** xref:Platform-Extensibility:INavCommandExtension_IN.adoc[]
+***** xref:Platform-Extensibility:INavReportExtension_IN.adoc[]
+****** xref:Platform-Extensibility:INavReportExtension.CreateReport_MT.adoc[]
+***** xref:Platform-Extensibility:MenuLocation_EN.adoc[]
+***** xref:Platform-Extensibility:NavCommandStatus_EN.adoc[]
+***** xref:Platform-Extensibility:NavCommandTypes_EN.adoc[]
+***** xref:Platform-Extensibility:NavExtensionTypes_EN.adoc[]
+***** xref:Platform-Extensibility:NavFolderControlFlags_EN.adoc[]
+***** xref:Platform-Extensibility:NavFolderControlType_EN.adoc[]
+***** xref:Platform-Extensibility:NavPickerAccountTypes_EN.adoc[]
+***** xref:Platform-Extensibility:NavPickerNameFormat_EN.adoc[]
+***** xref:Platform-Extensibility:NavPropertyPageTypes_EN.adoc[]
+***** xref:Platform-Extensibility:NavFolderTreeFlags_EN.adoc[]
+***** xref:Platform-Extensibility:NavFolderLocationFlags_EN.adoc[]
