--- a/modules/ROOT/partials/pl-om-ixmlexportable.adoc
+++ b/modules/ROOT/partials/pl-om-ixmlexportable.adoc
@@ -1,4 +1,4 @@
-****** xref:Platform-ObjectManager-IXmlExportable:IXmlExportable_IN.adoc[]
-******* xref:Platform-ObjectManager-IXmlExportable:IXmlExportable.SaveXml_MT.adoc[]
-******* xref:Platform-ObjectManager-IXmlExportable:IXmlExportable.SaveXml_1_MT.adoc[]
-******* xref:Platform-ObjectManager-IXmlExportable:IXmlExportable.SaveXml_2_MT.adoc[]
+***** xref:Platform-ObjectManager-IXmlExportable:IXmlExportable_IN.adoc[]
+****** xref:Platform-ObjectManager-IXmlExportable:IXmlExportable.SaveXml_MT.adoc[]
+****** xref:Platform-ObjectManager-IXmlExportable:IXmlExportable.SaveXml_1_MT.adoc[]
+****** xref:Platform-ObjectManager-IXmlExportable:IXmlExportable.SaveXml_2_MT.adoc[]
