--- a/modules/ROOT/partials/pl-om-lock.adoc
+++ b/modules/ROOT/partials/pl-om-lock.adoc
@@ -1,7 +1,7 @@
-****** xref:Platform-ObjectManager-Lock:LicenseManager_CL.adoc[]
-****** xref:Platform-ObjectManager-Lock:LinkType_EN.adoc[]
-****** xref:Platform-ObjectManager-Lock:LockedObject_CL.adoc[]
-****** xref:Platform-ObjectManager-Lock:LockedObjectCollection_CL.adoc[]
-****** xref:Platform-ObjectManager-Lock:LockedObjectType_EN.adoc[]
-****** xref:Platform-ObjectManager-Lock:LockManager_CL.adoc[]
-****** xref:Platform-ObjectManager-Lock:LockStatus_EN.adoc[]
+***** xref:Platform-ObjectManager-Lock:LicenseManager_CL.adoc[]
+***** xref:Platform-ObjectManager-Lock:LinkType_EN.adoc[]
+***** xref:Platform-ObjectManager-Lock:LockedObject_CL.adoc[]
+***** xref:Platform-ObjectManager-Lock:LockedObjectCollection_CL.adoc[]
+***** xref:Platform-ObjectManager-Lock:LockedObjectType_EN.adoc[]
+***** xref:Platform-ObjectManager-Lock:LockManager_CL.adoc[]
+***** xref:Platform-ObjectManager-Lock:LockStatus_EN.adoc[]
