--- a/modules/ROOT/partials/pl-om-row.adoc
+++ b/modules/ROOT/partials/pl-om-row.adoc
@@ -1,4 +1,4 @@
-****** xref:Platform-ObjectManager-Row:RowData_CL.adoc[]
-****** xref:Platform-ObjectManager-Row:RowDataCollection_CL.adoc[]
-****** xref:Platform-ObjectManager-Row:RowField_CL.adoc[]
-****** xref:Platform-ObjectManager-Row:RowFieldCollection_CL.adoc[]
+***** xref:Platform-ObjectManager-Row:RowData_CL.adoc[]
+***** xref:Platform-ObjectManager-Row:RowDataCollection_CL.adoc[]
+***** xref:Platform-ObjectManager-Row:RowField_CL.adoc[]
+***** xref:Platform-ObjectManager-Row:RowFieldCollection_CL.adoc[]
