Всё равно какая-то ерунда с навигацией в программисте. Давайте попробую просто пустой заголовок.

--- a/modules/ROOT/pages/development.adoc
+++ b/modules/ROOT/pages/development.adoc
@@ -1,6 +1,33 @@
 = Руководство по разработке
 
-В данном разделе рассмотрены типовые сценарии разработки на платформе {dv} 5:
+Базовая поставка платформы {dv} содержит полный набор средств для разработки собственных решений, удовлетворяющих потребности организации в сфере электронного документооборота и его автоматизации.
+
+.К таким средствам можно отнести:
+* Набор конструкторов -- мощное и простое средство настройки существующего программного продукта.
+* Возможность разработки новых шлюзов, функций и сценариев для использования их в бизнес-процессах.
+* Возможность создавать новые типы объектов платформы (карточек) для полноценного представления объектов целевой сферы деятельности.
+* Публичный API для разработки отдельных утилит, сценариев бизнес-процессов.
+
+Основное назначение данного раздела документа -- предоставить разработчику информацию о возможностях API {dv} через практические примеры.
+
+.Помимо этого, документ содержит другие сведения, напрямую связанные с созданием решений:
+* Создание собственных карточек и решений.
++
+Собственные типы карточки разрабатываются, например, если невозможно или сложно реализовать необходимую бизнес-логику, либо иную функциональность в т.ч. пользовательский интерфейс при помощи конструкторов {dv}.
++
+* Разработка сценариев в карточках.
++
+Сценарии (скрипты) в карточках библиотеки _{bo}_ позволяют расширить их функциональность штатным образом без разработки нового решения.
++
+* Разработка сценариев в бизнес-процессах.
++
+Сценарии (скрипты) в бизнес-процессах являются одним из способов реализации специфических действий, не предусмотренных стандартными функциями бизнес-процессов.
++
+* Разработка прикладных приложений (утилит).
++
+Разработка внешних по отношению к {dv} приложений, выполняющих какие-либо действия в системе, может быть востребована при интеграции {dv} с другими системами (синхронизация справочных данных). Примерами таких утилит могут выступать приложения для импорта данных в справочники сотрудников и контрагентов, входящие в пакет разработчика.
+
+В данном разделе приведена справочная информация об общем устройстве платформы и приложения _Workflow_, а также список ограничений на модификацию платформы, которые должны учитываться при разработке решений:
 
 * Использование API {dv} для взаимодействия с объектами системы.
 * Разработка новых типов карточек.
