--- a/modules/ROOT/root.adoc
+++ b/modules/ROOT/root.adoc
@@ -5,7 +5,8 @@
 ** xref:formatting.adoc[Соглашения по оформлению]
 ** xref:terms.adoc[Перечень терминов и их определений]
 ** xref:abbreviations.adoc[Перечень принятых сокращений]
-* xref:begin.adoc[]
+
+* Начало работы
 ** xref:development.adoc[]
 include::partial$cards.adoc[]
 include::partial$views.adoc[]
