TSK-2810 -- поправил навигацию руководства программиста

--- a/modules/ROOT/partials/schemas.adoc
+++ b/modules/ROOT/partials/schemas.adoc
@@ -1,4 +1,4 @@
-*** xref:schemas:standard-card-fields.adoc[]
+** xref:schemas:standard-card-fields.adoc[]
 *** xref:schemas:release/BackOffice/CardBaseUniversalItem.adoc[]
 *** xref:schemas:release/BackOffice/CardCalendar.adoc[]
 *** xref:schemas:release/BackOffice/CardCategoryList.adoc[]
