--- a/modules/ROOT/root.adoc
+++ b/modules/ROOT/root.adoc
@@ -7,7 +7,7 @@
 ** xref:abbreviations.adoc[Перечень принятых сокращений]
 
 * Начало работы
-** xref:development.adoc[]
+* xref:development.adoc[]
 include::partial$cards.adoc[]
 include::partial$views.adoc[]
 include::partial$solutions.adoc[]
