TSK-2810 -- ещё раз поправил навигацию руководства программиста, теперь должно быть правильно

--- a/modules/ROOT/partials/object-model.adoc
+++ b/modules/ROOT/partials/object-model.adoc
@@ -1,2 +1,2 @@
-** xref:DocsVisionObjectModel:class-lib.adoc[]
+* xref:DocsVisionObjectModel:class-lib.adoc[]
 ** xref:DocsVisionObjectModel:DocsVision/DocsVision_NS.adoc[]
