TSK-2810 -- финальные правки навигации, сверил со старой версией, должно быть ок

--- a/modules/ROOT/partials/samples.adoc
+++ b/modules/ROOT/partials/samples.adoc
@@ -49,5 +49,5 @@
 **** xref:samples:solution/installer/server.adoc[]
 *** xref:samples:solution/update.adoc[]
 *** xref:samples:solution/license.adoc[]
-** xref:samples:wincl-nav-extension.adoc[]
+*** xref:samples:wincl-nav-extension.adoc[]
 ** xref:samples:faq.adoc[]
