TSK-2810 -- нашёл расширение для проверки страниц, не указанных в навигации и добавил их все как подобает

--- a/modules/ROOT/partials/appendix.adoc
+++ b/modules/ROOT/partials/appendix.adoc
@@ -173,6 +173,7 @@
 ***** xref:appendix:controls/docsvision/HistoryGrid.adoc[]
 ***** xref:appendix:controls/docsvision/HtmlBrowser.adoc[]
 ***** xref:appendix:controls/docsvision/Preview.adoc[]
+***** xref:appendix:controls/docsvision/ReferenceListView.adoc[]
 ***** xref:appendix:controls/docsvision/RowChooseBox.adoc[]
 ***** xref:appendix:controls/docsvision/RowMultiChooseBox.adoc[]
 ***** xref:appendix:controls/docsvision/TaskTreeView.adoc[]
