--- a/modules/ROOT/partials/bo-om-services-staff.adoc
+++ b/modules/ROOT/partials/bo-om-services-staff.adoc
@@ -49,6 +49,7 @@
 ******* xref:BackOffice-ObjectModel-Services-IStaffService:IStaffService.Get_MT.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-IStaffService:IStaffService.GetCurrentEmployee_MT.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-IStaffService:IStaffService.GetDepartment_MT.adoc[]
+******* xref:BackOffice-ObjectModel-Services-IStaffService:IStaffService.GetEmployeeManager_MT.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-IStaffService:IStaffService.GetGroupEmployees_1_MT.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-IStaffService:IStaffService.GetGroupEmployees_MT.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-IStaffService:IStaffService.GetGroupItems_MT.adoc[]
