--- a/modules/ROOT/root.adoc
+++ b/modules/ROOT/root.adoc
@@ -44,7 +44,7 @@ include::partial$bo-om-services-tasklist.adoc[]
 include::partial$bo-om-services-task.adoc[]
 include::partial$bo-om-services-versionedfilecard.adoc[]
 include::partial$bo-om-accessinfo.adoc[]
-include::partial$bo-om-BaseCard.adoc[]
+include::partial$bo-om-basecard.adoc[]
 include::partial$bo-om-baseuniversal.adoc[]
 include::partial$bo-om-builtin.adoc[]
 include::partial$bo-om-calendar.adoc[]
