Ошибки, забыл удалить двойные слеши //

--- a/modules/cards/pages/bo-lib/partners.adoc
+++ b/modules/cards/pages/bo-lib/partners.adoc
@@ -36,13 +36,13 @@ partnersCompany.Name = "ЗАО \"Луч\"";
 partnersCompany.FullName = "Закрытое акционерное общество \"ЛУЧ\""; <.>
 partnersCompany.Type = PartnersCompanyType.Organization;
 partnersCompany.OrgType = orgType;
-partnersCompany.IsVendor = true; <.> //
+partnersCompany.IsVendor = true; <.>
 
 PartnersEmployee partnersEmployee = partnersService.AddNewEmployee(partnersCompany);
 partnersEmployee.LastName = "Иванов";
 partnersEmployee.FirstName = "Александр";
 partnersEmployee.MiddleName = "Сергеевич"; <.>
-partnersEmployee.Position = positionDir; <.> //
+partnersEmployee.Position = positionDir; <.>
 
 partnersCompany.Manager = partnersEmployee; <.>
 
