TSK-3076 -- пунктуационные ошибки

--- a/modules/BackOffice-WinForms/pages/Design/LayoutItems/IReusableLayoutItem_IN.adoc
+++ b/modules/BackOffice-WinForms/pages/Design/LayoutItems/IReusableLayoutItem_IN.adoc
@@ -25,7 +25,7 @@ public interface IReusableLayoutItem
 
 Данный интерфейс реализуется в компоненте элемента управления, если требуется дополнительно обработать события загрузки и повторного использования разметки в элементе управления.
 
-Реализуемые в компоненте элемента управления методы будут вызваны при первоначальной загрузке разметки и при повторном использовании соответственно. Методы будут вызваны только, если разметка поддерживает повторное использование.
+Реализуемые в компоненте элемента управления методы будут вызваны при первоначальной загрузке разметки и при повторном использовании соответственно. Методы будут вызваны, только если разметка поддерживает повторное использование.
 
 == Примеры
 
