--- a/modules/cards/pages/init-object-context.adoc
+++ b/modules/cards/pages/init-object-context.adoc
@@ -1,6 +1,6 @@
 = Инициализация контекста объектов
 
-После того как было выполнено подключение к серверу {dv} -- xref:connect-to-dv-server.adoc[создана пользовательская сессия] -- может быть создан xref:general-information.adoc#session-context[контекст объектов] для работы с методами API уровня бизнес-логики.
+После подключения к серверу {dv}, xref:connect-to-dv-server.adoc[создания пользовательской сессии], может быть создан xref:general-information.adoc#session-context[контекст объектов] для работы с методами API уровня бизнес-логики.
 
 .Создавать контекст объектов не требуется, если:
 * Пишется код для скрипта карточки, т.к. в этом случае готовый контекст объектов может быть получен непосредственно из класса скрипта.
