--- a/modules/samples/pages/solution/card-sql-package.adoc
+++ b/modules/samples/pages/solution/card-sql-package.adoc
@@ -29,7 +29,7 @@
 
 == Формирование данных
 
-После того как в {dv} был загружен новый тип карточки, настраиваем его при помощи конструкторов, заполняем справочник, если решение его содержит, первоначальными данными, создаем необходимые бизнес-процессы и карточки.
+Когда в {dv} был загружен новый тип карточки, настраиваем его при помощи конструкторов, заполняем справочник, если решение его содержит, первоначальными данными, создаем необходимые бизнес-процессы и карточки.
 
 .Тип "Карточка учета сетевого оборудования" была настроен с использованием:
 * _Конструктора разметок_ -- создана разметка с привязкой к данным карточки.
