--- a/modules/solutions/pages/cards/object-model/mapper.adoc
+++ b/modules/solutions/pages/cards/object-model/mapper.adoc
@@ -176,7 +176,7 @@ public class SampleDictionaryMapper : DictionaryMapper<SampleDictionary>
 
 == Регистрация преобразователей данных
 
-После того как классы преобразователей данных били разработаны, требуется создать ещё один класс -- _фабрика преобразователей данных_. В созданном классе нужно связать тип преобразователя к классу карточки или секции, за который он отвечает. Базовым классом для _фабрики преобразователей данных_ выступает класс `ObjectMapperFactory`.
+Когда классы преобразователей данных били разработаны, требуется создать ещё один класс -- _фабрика преобразователей данных_. В созданном классе нужно связать тип преобразователя к классу карточки или секции, за который он отвечает. Базовым классом для _фабрики преобразователей данных_ выступает класс `ObjectMapperFactory`.
 
 [source,csharp]
 ----
