--- a/modules/views/pages/delayed-changes.adoc
+++ b/modules/views/pages/delayed-changes.adoc
@@ -17,7 +17,7 @@ card.BeginUpdate(); <.>
 <.> Получение данных карточки.
 <.> Включение режима отложенных изменений для полученной карточки.
 
-После того как в карточку были внесены изменения, их нужно зафиксировать в базе данных, вызвав метод `EndUpdate`:
+Когда в карточку были внесены изменения, их нужно зафиксировать в базе данных, вызвав метод `EndUpdate`:
 
 [source,csharp]
 ----
