--- a/modules/schemas/pages/release/BackOffice/RefStaff.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefStaff.adoc
@@ -1,6 +1,6 @@
 = Справочник сотрудников
 
-* Идентификатор: `6710B92A-E148-4363-8A6F-1AA0EB18936C
+* Идентификатор: `6710B92A-E148-4363-8A6F-1AA0EB18936C`
 * Псевдоним: `RefStaff`
 * Название: _Справочник сотрудников_
 
