--- a/modules/ROOT/root.adoc
+++ b/modules/ROOT/root.adoc
@@ -1,4 +1,4 @@
-.xref:index.adoc[Руководство программиста {dv}]
+.xref:index.adoc[Руководство разработчика]
 * xref:index.adoc[]
 
 * Термины и оформление
