Поправил битые ссылки на описание полей стандартных карточек

--- a/modules/appendix/pages/webservice/samples.adoc
+++ b/modules/appendix/pages/webservice/samples.adoc
@@ -164,7 +164,7 @@ print(fileId) <.>
 .Чтобы создать карточки файла с версиями:
 . Создать карточку типа "Файл с версиями", используя метод `xref:webservice/cards/CardCreate.adoc[CardCreate]`.
 . Создать строки в секциях "Версии" и "Общая информация", используя метод `xref:webservice/rows/RowCreate.adoc[RowCreate]`.
-. Добавить, используя метод `xref:webservice/rows/RowSetData.adoc[RowSetData]`, в строку секции "Версии" значения полей (см. xref:schemas:standard-card-fields.adoc[Описание полей стандартной карточки]): `FileId` (используем идентификатор файла, полученный в предыдущем примере), `Version` и `VersionNumber`.
+. Добавить, используя метод `xref:webservice/rows/RowSetData.adoc[RowSetData]`, в строку секции "Версии" значения полей (см. xref:schemas:ROOT:index.adoc[Описание полей стандартной карточки]): `FileId` (используем идентификатор файла, полученный в предыдущем примере), `Version` и `VersionNumber`.
 . Добавить, используя метод `RowSetData`, в строку секции "Общая информация" значения полей: `CheckinDate`, `CurrentID` (указывается идентификатор строки версии, созданной ранее), `CurrentVersion`, `Name` и `NextVersion`.
 . Изменить описание карточки, используя `xref:webservice/cards/CardSetInfo.adoc[CardSetInfo]`.
 
