--- a/modules/cards/pages/create-card.adoc
+++ b/modules/cards/pages/create-card.adoc
@@ -13,7 +13,7 @@ CardData card = userSession.CardManager.CreateCardData(new Guid("6E39AD2B-E930-4
 
 [NOTE]
 ====
-Идентификатор типа карточки можно посмотреть в разделе xref:schemas:standard-card-fields.adoc[Описание полей стандартной карточки], либо в схеме карточки, например, используя программу "CardManager" из комплекта "Resource Kit".
+Идентификатор типа карточки можно посмотреть в разделе xref:schemas:ROOT:index.adoc[Описание полей стандартной карточки], либо в схеме карточки, например, используя программу "CardManager" из комплекта "Resource Kit".
 ====
 
 Если необходимо создать карточку с определённым идентификатором, можно воспользоваться соответствующей перегрузкой метода:
@@ -24,7 +24,7 @@ CardData card = userSession.CardManager.CreateCardData(new Guid("6E39AD2B-E930-4
 ----
 <.> `newCardId` -- идентификатор создаваемой карточки.
 
-После создания экземпляра карточки, если необходимо, её данные могут быть изменены по аналогии с примером, приведенным в разделе xref:edit-card.adoc[Изменение данных карточки]. Возможность изменения определённых данных карточки, а также тип этих данных определяются типом карточки, описание которых приведено в разделе xref:schemas:standard-card-fields.adoc[Описание полей стандартной карточки].
+После создания экземпляра карточки, если необходимо, её данные могут быть изменены по аналогии с примером, приведенным в разделе xref:edit-card.adoc[Изменение данных карточки]. Возможность изменения определённых данных карточки, а также тип этих данных определяются типом карточки, описание которых приведено в разделе xref:schemas:ROOT:index.adoc[Описание полей стандартной карточки].
 
 == Объектная модель
 
