--- a/modules/cards/pages/delete-object.adoc
+++ b/modules/cards/pages/delete-object.adoc
@@ -43,7 +43,7 @@ section.DeleteRow(firstRowId); <.>
 <.> Получаем карточку, из которой удаляется строка.
 <.> Получаем сущность секции.
 +
-`sectionId` -- идентификатор секции, из которой удаляется строка. Чтобы получить идентификатор секции стандартных карточек, обратитесь к разделу xref:schemas:standard-card-fields.adoc[Описание полей стандартной карточки].
+`sectionId` -- идентификатор секции, из которой удаляется строка. Чтобы получить идентификатор секции стандартных карточек, обратитесь к разделу xref:schemas:ROOT:index.adoc[Описание полей стандартной карточки].
 +
 <.> Получаем идентификатор первой строки.
 <.> Выполняем удаление.
