--- a/modules/cards/pages/general-information.adoc
+++ b/modules/cards/pages/general-information.adoc
@@ -222,7 +222,7 @@ IDocumentService documentService = objectContext.GetService<IDocumentService>();
 +
 [NOTE]
 ====
-В {dv} представлено xref:schemas:standard-card-fields.adoc[большое количество] типов карточек. Если существующие типы недостаточно точно отражают объект целевой системы, может быть разработан xref:solutions:cards/scheme/dev-cards-and-lib.adoc[собственный] с уникальной бизнес-логикой.
+В {dv} представлено xref:schemas:ROOT:index.adoc[большое количество] типов карточек. Если существующие типы недостаточно точно отражают объект целевой системы, может быть разработан xref:solutions:cards/scheme/dev-cards-and-lib.adoc[собственный] с уникальной бизнес-логикой.
 ====
 +
 * _Экземпляр карточки_ -- экземпляр карточки определённого типа. Экземпляр карточки обладает уникальным идентификатором, по которому карточка может быть получена из базы данных. Если следовать аналогии, то экземпляр карточки -- это объект.
