--- a/modules/cards/pages/get-section.adoc
+++ b/modules/cards/pages/get-section.adoc
@@ -16,7 +16,7 @@ SectionData section = card.Sections[sectionId]; <.> <.> <.>
 +
 [NOTE]
 ====
-Идентификаторы секций карточек базовой поставки {dv} приведены в разделе xref:schemas:standard-card-fields.adoc[Описание полей стандартной карточки].
+Идентификаторы секций карточек базовой поставки {dv} приведены в разделе xref:schemas:ROOT:index.adoc[Описание полей стандартной карточки].
 ====
 
 .После получения данных секции можно:
@@ -72,7 +72,7 @@ foreach (var folderRow in row.ChildRows) <.>
  Console.WriteLine(folderRow["Name"]); <.>
 }        
 ----
-<.> Получаем данные карточки папок (см. xref:schemas:standard-card-fields.adoc[Описание полей стандартной карточки]).
+<.> Получаем данные карточки папок (см. xref:schemas:ROOT:index.adoc[Описание полей стандартной карточки]).
 <.> Выбираем секцию "Папки".
 <.> Выбираем строку "Папки". Данная строка содержит подстроки, отражающие папки одноименного раздела в дереве папок {wincl}а.
 <.> Перебираем строки первого уровня. Коллекцию строк без учета иерархии можно получить из свойства `AllChildRows`.
