--- a/modules/solutions/pages/cards/scheme/dev-cards-and-lib.adoc
+++ b/modules/solutions/pages/cards/scheme/dev-cards-and-lib.adoc
@@ -9,7 +9,7 @@
 
 В логическом смысле карточка представляет собой описание пользовательского бизнес-объекта, содержащее в себе все необходимые данные и возможности для выполнения операций над ними. Физически карточка -- это совокупность программных объектов (компонент), объектов в базе данных системы (таблиц и хранимых процедур), а также мета-описание структур данных в XML формате.
 
-Каждая карточка относится к одному из типов. Тип карточки -- логическое понятие, введённое с целью отличать разнородные карточки друг от друга. Каждый тип имеет уникальное имя и идентификатор, например, идентификатор типа карточки "Документ" имеет значение `B9F7BFD7-7429-455E-A3F1-94FFB569C794` (идентификаторы стандартных карточек приведены в разделе xref:schemas:standard-card-fields.adoc["Описание полей стандартной карточки"]). При необходимости не только различать отдельные карточки, но и группировать сходные карточки, типы карточек объединяются в библиотеки по их схожести для пользователя. Принадлежность типа карточки к какой-либо библиотеке определяется автором карточки.
+Каждая карточка относится к одному из типов. Тип карточки -- логическое понятие, введённое с целью отличать разнородные карточки друг от друга. Каждый тип имеет уникальное имя и идентификатор, например, идентификатор типа карточки "Документ" имеет значение `B9F7BFD7-7429-455E-A3F1-94FFB569C794` (идентификаторы стандартных карточек приведены в разделе xref:schemas:ROOT:index.adoc["Описание полей стандартной карточки"]). При необходимости не только различать отдельные карточки, но и группировать сходные карточки, типы карточек объединяются в библиотеки по их схожести для пользователя. Принадлежность типа карточки к какой-либо библиотеке определяется автором карточки.
 
 Следует различать тип карточки и экземпляр карточки. Регистрация новой карточки в системе добавляет один новый тип, для которого впоследствии может быть создано неограниченное количество экземпляров карточек. Все созданные экземпляры будут принадлежать одному типу, то есть использовать для работы одни и те же программные компоненты и структуры данных.
 
