--- a/modules/cards/pages/search.adoc
+++ b/modules/cards/pages/search.adoc
@@ -238,7 +238,7 @@ RowDataCollection results = section.FindRows(query.GetXml()); <.>
 
 .Полный перечень этих полей для стандартных типов карточек можно посмотреть:
 * При помощи утилиты "CardManager", входящей в Resource Kit, открыв схему соответствующей карточки (схемы всех базовых типов карточек входят в состав пакета разработчика);
-* В разделе xref:schemas:standard-card-fields.adoc[Описание полей стандартных карточек].
+* В разделе xref:schemas:ROOT:index.adoc[Описание полей стандартных карточек].
 
 Другим простым способом, который может помочь в построении XPath-запроса, является получение непосредственно данных секции в формате XML на примере любой карточки интересующего типа (при помощи команды _Экспорт и печать_ в {wincl}е). Используя эти данные как образец, можно строить запросы непосредственно на базе этого XML-документа.
 
