--- a/modules/samples/pages/faq.adoc
+++ b/modules/samples/pages/faq.adoc
@@ -159,7 +159,7 @@ result = (((BaseCardSectionRow)document.GetSection(sectionID)[0])[fieldAlias] as
 Как узнать идентификатор определённого вида карточки::
 Воспользуйтесь утилитой {dv} Explorer, входящей в Resource Kit.
 
-. Нажать *Card types*. В открывшемся окне определить идентификатор типа карточки (идентификатор в "Selected type ID"), также идентификатор можно найти в разделе xref:schemas:standard-card-fields.adoc[Описание полей стандартной карточки] (идентификатор указан вначале описания конкретной карточки).
+. Нажать *Card types*. В открывшемся окне определить идентификатор типа карточки (идентификатор в "Selected type ID"), также идентификатор можно найти в разделе xref:schemas:ROOT:index.adoc[Описание полей стандартной карточки] (идентификатор указан вначале описания конкретной карточки).
 . Нажать *Cards*. В списке типов карточек выбрать "Справочник видов карточек", после чего нажать *Search*.
 . Выбрать найденный справочник (будет в единственном экземпляре). В справочнике нужно найти строку с найденным ранее идентификатором типа карточки (по содержимому поля "CardTypeId").
 . Нажать *Enter section*.
